--- a/ios/projectReact.xcodeproj/xcshareddata/xcschemes/projectReact.xcscheme
+++ b/ios/projectReact.xcodeproj/xcshareddata/xcschemes/projectReact.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "projectHawa.app"
-               BlueprintName = "projectHawa"
-               ReferencedContainer = "container:projectHawa.xcodeproj">
+               BuildableName = "projectReact.app"
+               BlueprintName = "projectReact"
+               ReferencedContainer = "container:projectReact.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "projectHawaTests.xctest"
-               BlueprintName = "projectHawaTests"
-               ReferencedContainer = "container:projectHawa.xcodeproj">
+               BuildableName = "projectReactTests.xctest"
+               BlueprintName = "projectReactTests"
+               ReferencedContainer = "container:projectReact.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "projectHawa.app"
-            BlueprintName = "projectHawa"
-            ReferencedContainer = "container:projectHawa.xcodeproj">
+            BuildableName = "projectReact.app"
+            BlueprintName = "projectReact"
+            ReferencedContainer = "container:projectReact.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "projectHawa.app"
-            BlueprintName = "projectHawa"
-            ReferencedContainer = "container:projectHawa.xcodeproj">
+            BuildableName = "projectReact.app"
+            BlueprintName = "projectReact"
+            ReferencedContainer = "container:projectReact.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
