--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projectHawa",
+  "name": "projectReact",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,13 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
-    "@react-navigation/stack": "^7.1.1",
     "react": "19.0.0",
-    "react-native": "0.78.0",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1"
+    "react-native": "0.78.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
